// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post should render correctly with posts 1`] = `
<div
  className="container"
>
  <div
    className="post"
  >
    <h4
      className="center"
    >
      First title
    </h4>
    <p>
      This is my body
    </p>
    <div
      className="center"
    >
      <button
        className="btn red"
        data-name="deleteSubmit"
        onClick={[Function]}
      >
        Delete Post
      </button>
      <button
        className="btn grey"
        data-name="editButton"
        onClick={[Function]}
      >
        Edit Post
      </button>
       
    </div>
  </div>
</div>
`;

exports[`Post should render correctly without posts 1`] = `
<div
  className="container"
>
  <div
    className="center"
  >
    Loding post.....
  </div>
</div>
`;

exports[`PostConnected should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Post)
    match={
      Object {
        "params": Object {
          "post_id": "2",
        },
      }
    }
  >
    <Post
      deletePost={[Function]}
      match={
        Object {
          "params": Object {
            "post_id": "2",
          },
        }
      }
      post={
        Object {
          "body": "This is the second body",
          "id": "2",
          "title": "Second title",
        }
      }
    >
      <div
        className="container"
      >
        <div
          className="post"
        >
          <h4
            className="center"
          >
            Second title
          </h4>
          <p>
            This is the second body
          </p>
          <div
            className="center"
          >
            <button
              className="btn red"
              data-name="deleteSubmit"
              onClick={[Function]}
            >
              Delete Post
            </button>
            <button
              className="btn grey"
              data-name="editButton"
              onClick={[Function]}
            >
              Edit Post
            </button>
             
          </div>
        </div>
      </div>
    </Post>
  </Connect(Post)>
</Provider>
`;
